commiting for emin's needs

--- a/src/components/SignInPage/css/SignInPage.scss
+++ b/src/components/SignInPage/css/SignInPage.scss
@@ -8,9 +8,12 @@
   display: flex;
   justify-content: space-around;
   max-width: 14400px;
-  position: absolute;
-  width: 100%;
-  height: 100%;
+  padding: 65px 0px;
+  text-align: center;
+  //position: absolute;
+  //width: 100%;
+  //height: 100%;
+  //margin-top: 50px;
 }
 
 
