--- a/src/components/sharedComponents/Icon/icon.scss
+++ b/src/components/sharedComponents/Icon/icon.scss
@@ -1,14 +1,3 @@
-//.loginPage-logo {
-//
-//  //width: 500px;
-//
-//}
-//
-//.loginPage-logo:after {
-//  content: '';
-//  border-bottom: 1px solid black;
-//  display: inline-block;
-//  width: 100px;
-//  height: 10px;
-//}
-
+.logo{
+width: 70px;
+}
