--- a/src/components/SignInPage/SigninRegisterPanel/css/sginInPanel.scss
+++ b/src/components/SignInPage/SigninRegisterPanel/css/sginInPanel.scss
@@ -1,21 +1,21 @@
 .sign-in-panel{
 
-  padding: 20px;
+  padding: 40px 20px 20px;
 display: inline-block;
   background-color: white;
   border-radius: 30px;
-  box-shadow: 0px 0px 20px 1px grey;
+  box-shadow: 0px 0px 20px 8px #ccc9c9;
 align-self: center;
   margin: 100px 0px;
 
 }
 
-.logo{
-
-  padding-top: 30px;
-  width: 50px;
-
-}
+//.logo{
+//
+//  padding-top: 30px;
+//  width: 50px;
+//
+//}
 .logo-after{
 
   height: 2px;
