--- a/src/components/MainFeed/MainFeedProfile/mainFeedProfile.scss
+++ b/src/components/MainFeed/MainFeedProfile/mainFeedProfile.scss
@@ -1,13 +1,12 @@
 .main-feed-profile{
-  width: 540px;
-  margin: 0 auto;
+  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  //overflow: hidden;
-  //background-color: teal;
+  background-color: #fff;
   border-radius: 5%;
+  margin-top: 50px;
 
   &-settings{
     align-self: flex-end;
