--- a/src/components/sharedComponents/postComment/css/postComment.scss
+++ b/src/components/sharedComponents/postComment/css/postComment.scss
@@ -2,13 +2,15 @@
   background-color:rgba(112,112,112,0.3);
   display: flex;
   justify-content: center;
-  //width: 100%;
-  //height: 100%;
-  //position: absolute;
+  width: 100%;
+  height: 100%;
+  position: absolute;
 }
 
 .post-comment-window{
   display: flex;
+  transform: scale(0.7);
+
 }
 
 .comment-section{
@@ -49,8 +51,17 @@
   align-self: center;
 }
 
+.comment-section-middle{
+
+}
+.posted-comments{
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
 .post-comment-like-count{
 display: flex;
+padding: 0px 0px 20px 40px;
 }
 
 .like-count-icon{
@@ -58,7 +69,8 @@ display: flex;
 }
 .count-number{
   align-self: center;
-  font-size: 20px;
+  font-size: 25px;
+
 }
 .write-comment{
   background-color: #e6e6e6;
