--- a/src/components/SignInPage/SigninRegisterPanel/css/sginInPanel.scss
+++ b/src/components/SignInPage/SigninRegisterPanel/css/sginInPanel.scss
@@ -46,7 +46,7 @@ align-self: center;
 
   padding: 20px 50px 20px 20px;
   border: none;
-  width: 100%;
+  //width: 100%;
 font-size: 20px;
   color: #b3b3b3;
 outline: none;
