--- a/src/components/SignInPage/css/SignInPage.scss
+++ b/src/components/SignInPage/css/SignInPage.scss
@@ -1,4 +1,3 @@
-@import "../SigninRegisterPanel/css/sginInPanel";
 @import "../ShareTheMoment/css/shareTheMoment";
 @import "./SiginPage-media";
 
@@ -7,7 +6,7 @@
   background: linear-gradient(90deg, rgba(247,246,252,1) 77%, rgba(254,238,229,1) 77%);
   display: flex;
   justify-content: space-around;
-  max-width: 14400px;
+  //max-width: 1400px;
   padding: 65px 0px;
   text-align: center;
   //position: absolute;
