--- a/src/components/sharedComponents/postComment/postedComment/postedComment.scss
+++ b/src/components/sharedComponents/postComment/postedComment/postedComment.scss
@@ -2,6 +2,7 @@
   display: flex;
   padding: 40px 40px 0px;
   //margin-bottom: 100px;
+  color: #5c5c5c;
 }
 .comment-details{
   align-self: center;
