--- a/src/components/userProfile/mediaCard/mediaCard.scss
+++ b/src/components/userProfile/mediaCard/mediaCard.scss
@@ -1,6 +1,16 @@
 .mediaCard {
+    margin-bottom: 50px;
     align-self: flex-start;
     background-color: #ffffff;
+    border-radius: 10px;
+    overflow: hidden;
+    box-shadow: 0px 0px 10px 0px rgba(173,157,173,1);
+
+    &:hover {
+        cursor: pointer;
+        transform: scale(1.1);
+        transition: all 0.2s;
+    }
 
     &_photo {
         width: 250px;
