--- a/src/components/sharedComponents/postComment/css/postComment.scss
+++ b/src/components/sharedComponents/postComment/css/postComment.scss
@@ -2,17 +2,26 @@
   background-color: rgba(112, 112, 112, 0.3);
   display: flex;
   justify-content: center;
+
   font-family: sans-serif;
-  width: 100%;
-  height: 100%;
+  //width: 100%;
+  //height: 100%;
+  top: 0;
+  bottom: 0;
+  right: 0;
+  left: 0 ;
   z-index: 2;
   position: fixed;
 }
 
+.posted-img{
+  width: 900px;
+}
+
 .post-comment-window {
   display: flex;
-  transform: scale(0.7);
-
+  transform: scale(0.6);
+  align-self: center;
 }
 
 .comment-section {
@@ -24,7 +33,10 @@
   border-top-right-radius: 50px;
 
 }
-
+//.blah-blah{
+//  width: 100%;
+//
+//}
 .comment-section-top {
   display: flex;
   justify-content: space-between;
@@ -50,6 +62,7 @@
 .comment-section-username {
   align-self: center;
   font-size: 28px;
+  padding-right: 20px;
 
 }
 
@@ -65,11 +78,13 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
+  overflow: scroll;
+  height: 600px;
 }
 
 .post-comment-like-count {
   display: flex;
-  padding: 0px 0px 20px 40px;
+  padding: 20px 0px 20px 40px;
 }
 
 .like-count-icon {
@@ -84,7 +99,6 @@
 
 .write-comment {
   background-color: #e6e6e6;
-  //padding: 0px 200px 0px 10px;
   display: flex;
   border-bottom-right-radius: 50px;
 }
