--- a/src/components/sharedComponents/searchResults/css/searchResult.scss
+++ b/src/components/sharedComponents/searchResults/css/searchResult.scss
@@ -6,16 +6,25 @@
   z-index: 2;
   display: flex;
   justify-content: center;
+
 }
 
 .search-results-window{
   background-color: white;
-  display: flex;
-  flex-direction: column;
-  justify-content: flex-start;
+  //display: flex;
+  //flex-direction: column;
+  //justify-content: flex-start;
   align-self: center;
-  padding: 100px;
+  padding: 30px 60px 50px;
   border-radius: 50px;
+  transform: scale(0.8);
+  height: 350px;
+  //overflow-scrolling: touch;
+  -webkit-overflow-scrolling: touch;
+
+  overflow-x: hidden;
+  overflow-y: scroll;
+
 }
 
 
