--- a/src/components/sharedComponents/searchResults/singleSearchResult/css/singleSearchResult.scss
+++ b/src/components/sharedComponents/searchResults/singleSearchResult/css/singleSearchResult.scss
@@ -1,7 +1,7 @@
 .single-search-result{
   display: flex;
   justify-content: space-between;
-  margin-bottom: 30px;
+  margin-top: 30px;
 }
 .search-result:last-child{
   margin-bottom: 0;
