--- a/src/components/sharedComponents/sharePostBTN/css/shareBtn.scss
+++ b/src/components/sharedComponents/sharePostBTN/css/shareBtn.scss
@@ -14,6 +14,7 @@ padding:10px;
   text-transform: uppercase;
   align-items: center;
   left: calc(100% / 2 - 80px);
+  transform: scale(0.7);
 }
 
 .plus-icon{
