--- a/src/components/userProfile/css/userMedia.scss
+++ b/src/components/userProfile/css/userMedia.scss
@@ -13,3 +13,11 @@
         display: none;
     }
 }
+
+
+@media screen and (max-width: 1279px) {
+    
+    .userMediaContainer {
+        width: 100%;    
+    }
+}
