--- a/src/components/userProfile/mediaCard/mediaCard.scss
+++ b/src/components/userProfile/mediaCard/mediaCard.scss
@@ -40,3 +40,11 @@
         color: #3f3f3f;
     }
 }
+
+
+@media screen and (max-width: 1279px) {
+
+    .mediaCard {
+        margin: 0 10px 50px;
+    }
+}
