--- a/src/components/sharedComponents/Navbar/css/customNavbar.scss
+++ b/src/components/sharedComponents/Navbar/css/customNavbar.scss
@@ -10,7 +10,7 @@
 .elementContainer {
     width: 1280px;
     height: 100%;
-    margin: 0 calc((100% - 1280px) / 2);
+    margin: 0 auto;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -57,5 +57,34 @@
     &_profileIcon:hover {
         transform: scale(1.3);
         transition: 0.2s ease;
+    }
+}
+
+
+
+@media screen and (max-width: 1279px) {
+
+    .elementContainer {
+        width: 80%;
+
+        &_logo {
+            width: 30px;
+        }
+    }
+
+    .leftMenu {
+        width: 55%;
+        justify-content: space-between;
+    }
+}
+
+
+@media screen and (max-width: 468px) {
+
+    .leftMenu {
+        width: 75%;
+        &_profileIcon{
+            align-self: center;
+        }
     }
 }
