--- a/src/components/sharedComponents/profilePhoto/profilePhoto.scss
+++ b/src/components/sharedComponents/profilePhoto/profilePhoto.scss
@@ -2,3 +2,10 @@
     width: 190px;
     border-radius: 25px;
 }
+
+@media screen and (max-width: 1279px) {
+
+    .profile-photo {
+        width: 50px;
+    }
+}
