--- a/src/components/userProfile/css/userProfile.scss
+++ b/src/components/userProfile/css/userProfile.scss
@@ -2,4 +2,12 @@
     width: 1280px;
     margin: 0 auto;
     margin-top: 80px;
+    overflow: hidden;
+}
+
+@media screen and (max-width: 1279px) {
+    
+    .userProfileContainer {
+        width: 80%;
+    }
 }
