--- a/src/components/settingsPage/css/settingsPage.scss
+++ b/src/components/settingsPage/css/settingsPage.scss
@@ -23,6 +23,12 @@
   display: flex;
 }
 
+.setting-page-avatar{
+  width: 75px;
+  height: 75px;
+  border-radius: 20px;
+}
+
 .change-photo-button {
   align-self: center;
   padding: 10px;
