sign in page fixes

--- a/src/components/SignInPage/ShareTheMoment/css/shareTheMoment.scss
+++ b/src/components/SignInPage/ShareTheMoment/css/shareTheMoment.scss
@@ -3,8 +3,8 @@ align-self: center;
 text-align: right;
 }
 .share-moment-img{
-  max-width: 80%;
-  display:inline-block ;
+  width: 80%;
+  display:inline-block;
 
 }
 
