--- a/src/components/SignInPage/css/SiginPage-media.scss
+++ b/src/components/SignInPage/css/SiginPage-media.scss
@@ -1,3 +1,9 @@
+@media only screen and (max-width: 1200px) and (min-width: 992px) {
+.login-page-container{
+width: 992px;
+}
+}
+
 
 @media only screen and (max-width: 1200px)and (min-width: 992px){
   .sign-in-page{
@@ -26,8 +32,10 @@
     background: #f7f6fc;
     justify-content: center;
   }
+  .login-page-container{
+    width: 100%;
+  }
   .sign-in-panel{
-    margin: 100px 0px 100px;
   }
 .share-the-moment{
   display:none;
