--- a/src/components/settingsPage/css/settingsPage-media.scss
+++ b/src/components/settingsPage/css/settingsPage-media.scss
@@ -1,9 +1,15 @@
 @media only screen and (max-width: 992px) {
+  .settings-page {
+    justify-content: center;
+    align-items: flex-start;
+    margin-top: 50px;
+  }
+  
   .settings-window {
-  //transform: scale(0.7);
-    padding: 40px 180px 40px 110px;
-
-
+    align-self: center;
+    transform: scale(0.6);
+    padding: 40px 130px 40px 110px;
+  
   }
   .personal-info-fields, .contact-info-fields, .change-password-fields{
     margin: 0px 0px 10px 15px;
