--- a/src/components/settingsPage/css/settingsPage.scss
+++ b/src/components/settingsPage/css/settingsPage.scss
@@ -1,8 +1,12 @@
 .settings-page {
   background-color: rgba(112, 112, 112, 0.3);
   position: fixed;
-  width: 100%;
-  height: 100%;
+  // width: 100%;
+  // height: 100%;
+  top: 0%;
+  bottom: 0;
+  left: 0;
+  right: 0;
   display: flex;
   justify-content: center;
   z-index: 3;
