--- a/src/components/sharedComponents/postComment/css/postComment.scss
+++ b/src/components/sharedComponents/postComment/css/postComment.scss
@@ -16,6 +16,7 @@
 
 .posted-img{
   width: 900px;
+  //width: 100%;
 }
 
 .post-comment-window {
@@ -54,16 +55,16 @@
 }
 
 .comment-section-user-img {
-
   margin-right: 12px;
-
+  width: 60px;
+  align-self: center;
+  border-radius: 10%;
 }
 
 .comment-section-username {
   align-self: center;
   font-size: 28px;
   padding-right: 20px;
-
 }
 
 .options-button {
@@ -77,7 +78,7 @@
 .posted-comments {
   display: flex;
   flex-direction: column;
-  justify-content: space-between;
+  justify-content: flex-start;
   overflow: scroll;
   height: 600px;
 }
